# fudgelang_rust

./: .gitignore  Cargo.toml  README.md
fudgels/: Cargo.toml
fudgels/src/: fudgels.rs
fudgelsp/: Cargo.toml
fudgelsp/src/: fudgelsp.rs
libfudge/: Cargo.toml
libfudge/benches/: scanner_benchmark.rs
libfudge/src/: libfudgec.rs  output.rs
libfudge/src/asg/: asg.rs  expression.rs  mod.rs  scope.rs  statement.rs  symboltable.rs
libfudge/src/asgprocessing/: asgprocessing.rs  mod.rs  symbolresolution.rs
libfudge/src/ast/: ast.rs
libfudge/src/error/: mod.rs
libfudge/src/grapher/: grapher.rs  mod.rs
libfudge/src/grapher/grapher/: builtins.rs  expressions.rs  statements.rs
libfudge/src/interpreter/: mod.rs  treewalker.rs
libfudge/src/interpreter/test/: arithmetics.rs  basic.rs  graphwalkertestingharness.rs  mod.rs  modules.rs  structs.rs  treewalkertestingharness.rs  utils.rs
libfudge/src/ir/: basicblock.rs  function.rs  ir.rs  mod.rs  program.rs
libfudge/src/ircodegen/: ircodegen.rs  mod.rs
libfudge/src/irprocessing/: irprocessing.rs  mod.rs
libfudge/src/parser/: ast.rs  mod.rs  parser.rs  stringstore.rs  tokenstream.rs
libfudge/src/parser/parser/: builtins.rs  expressions.rs
libfudge/src/parser/test/: arithmetics.rs  basic.rs  declarations.rs  functions.rs  ifexpressions.rs  ifstatements.rs  layout.rs  mod.rs  primitives.rs  structs.rs  subscripts.rs  utils.rs
libfudge/src/passes/: asgprocessing.rs  mod.rs  symbolresolution.rs  typechecking.rs
libfudge/src/scanner/: mod.rs  scanner.rs  token.rs
libfudge/src/scanner/test/: basic.rs  characterliterals.rs  comments.rs  identifiers.rs  indentation.rs  mod.rs  (+2 more)
libfudge/src/shared/: mod.rs
libfudge/src/source/: lookaheadreader.rs  mod.rs  test.rs
libfudge/src/typesystem/: typesystem.rs
libfudge/src/utils/: mod.rs  objectstore.rs  stringstore.rs
libfudge/src/vm/: bytecodechunk.rs  instructions.rs  interpreter.rs  mod.rs  program.rs  vm.rs
libfudge/src/vmcodegen/: mod.rs  vmcodegen.rs
libfudge/testdata/: comments.fu
(+77 files in other folders)
