[package]
name = "fudgelang-lsp"
version = "0.1.0"
authors = ["Joel Lennartsson <joel.andreas.lennartsson@gmail.com>"]
edition = "2018"

[[bin]]
name = "fudgelsp"
path = "src/fudgelsp.rs"
bench = false

[dependencies]
fudgelang-lib = { path = "../libfudge" }
tokio = { version = "1.24.1", features = ["full"] }
tower-lsp = "0.18.0"
ropey = "1.5.1"